2002-03-26  Bernhard Rosenkraenzer <bero@redhat.com>
	* src/grep.c: Don't fail if we don't have an stdout fd and -q
	  is used (happens e.g. on calls from hotplug scripts)
	* src/grep.c: Don't hang forever if fed with an empty string to
	  grep for and --color enabled
	* po/*: Sync wiith translation project
	* configure.in: Bump version number, require a recent autoconf

2002-03-14  Bernhard Rosenkraenzer <bero@redhat.com>
	* src/Makefile.am, po/Makefile.in.in: Support DESTDIR properly
	* tests/bre.tests: Add fix from
	  Peter Breitenlohner <peb@mppmu.mpg.de>

2002-03-13  Bernhard Rosenkraenzer <bero@redhat.com>
	* configure.in, m4/regex.m4, m4/malloc.m4, m4/realloc.m4:
	  Don't set LIBOBJS directly, autoconf 2.53 doesn't like it
	* intl/*: Sync with gettext 0.11
	* po/*: Sync with translation project
	* configure.in, src/Makefile.am: Don't duplicate code - make
	  egrep and fgrep links to grep and set matcher based on
	  application name, suggestion from
	  Guillaume Cottenceau <gc@mandrakesoft.com>
	* src/grep.c: (prline) Add fix for -i --color from
	  Jim Meyering <meyering@lucent.com>
	* configure.in: Version 2.5; release

2002-01-23  Bernhard Rosenkraenzer <bero@redhat.com>
	* configure.in: Version 2.5g
	* Makefile.cvs, grep.spec: Add packaging tools
	Merge djgpp changes from Andrew Cottrell <anddjgpp@ihug.coml.au>:
	* src/grep.c: Added conditional compilation for DJGPP
	* djgpp: remove directory as it is no longer required with DJGPP 2.03
                 (or 2.04 when released)
	* README.DOS: Moved djgpp/readme to readme.dos
	* PATCHES.AC, PATCHES.AM: delete files - redundant
	* configure.in, Makefile.am: remove djgpp directory from list

2002-01-22  Bernhard Rosenkraenzer <bero@redhat.com>
	* doc/grep.texi, doc/grep.1, NEWS: Document --label
	* po/ru.po: Sync with translation project
	* po/grep.pot: Sync with source

2002-01-18  Bernhard Rosenkraenzer <bero@redhat.com>
	* src/grep.c: Add --label, based on patch from Stepan Koltsov
